src/03-grafana/05-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana-route
  namespace: g-monitor-ns
  labels:
    name: grafana-route
    app: grafana-app
    project: g-monitor-project
    operated-prometheus: "true"
spec:
  path: /
  to:
    kind: Service
    name: grafana-service
    weight: 100
  port:
    targetPort: grafana
  tls:
    termination: edge
  wildcardPolicy: None
